<resources>
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_password">Password Kurang dari 6 Karakter</string>
    <string name="error_email">Email Tidak Valid</string>
    <string name="btn_txt_login">Login</string>
    <string name="txt_register">Tidak Punya Akun? Daftar</string>
    <string name="name">Nama</string>
    <string name="register">Daftar</string>
    <string name="sudah_mempunyai_akun_login">Sudah Mempunyai Akun? Login</string>
    <string name="silahkan_tunggu">Silahkan Tunggu</string>
    <string name="add_story">add story</string>
    <string name="add_photo">Add Photo</string>
    <string name="new_story">New Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="all_location">Location Story</string>
    <string name="add_description_here">Add Description here ....</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="is_not_empty">Is Not Empty</string>
    <string name="daftar_apps_story">Daftar Apps Story</string>
    <string name="take_camera">Take Camera</string>
    <string name="change_camera">Change Camera</string>
    <string name="retry">Coba lagi</string>

</resources>